--- a/global-typography.25.scss
+++ b/global-typography.25.scss
@@ -4,7 +4,10 @@
 */
 
 html {
-    font-size: #{$base_font_size}px;
+    // use percentage value to account for user-defined base font size (typically 16px, but could be anywhere between 9-24px)
+    //font-size: #{$base_font_size}px;
+    font-size: #{($base_font_size / 16) * 100} + "%";
+    
     // define rules which shouldn't be applied for admin views
     //&:not(.admin),
     //&.admin.fullscreen-preview {
@@ -46,343 +49,171 @@ html {
     //}
 }
 
-// $enable-rfs: false;
+@function get_line_height($font_size) {
+    $lookup_table: (
+        48: 1.25,   // 60
+        36: 1.277,  // 46
+        30: 1.333,  // 40
+        24: 1.333,  // 32
+        20: 1.4,    // 28
+        16: 1.5,    // 24
+        14: 1.464,  // 20.5
+        12: 1.428,  // 20
+        10: 1.35    // 13.5
+    );
+    
+    $multiple: map-get($lookup_table, $font_size);
 
-// stylelint-disable property-blacklist, scss/dollar-variable-default
+    @if not ($multiple) {
+        $closestDiff: 1000;
 
-// SCSS RFS mixin
-//
-// Automated responsive values for for font sizes, paddings, margins and much more
-//
-// Licensed under MIT (https://github.com/twbs/rfs/blob/master/LICENSE)
+        @each $key, $value in $lookup_table {
+            $diff: 0;
+            
+            @if ($key > $font_size) {
+                $diff: $key - $font_size;
+            } @else {
+                $diff: $font_size - $key;
+            }
+            
+            @if ($diff < $closestDiff) {
+                $closestDiff: $diff;
+                $multiple: $value;
+            }
 
-// Configuration
-
-// Base value
-$rfs-base-value: 1.25rem !default;
-$rfs-unit: rem !default;
-
-@if $rfs-unit != rem and $rfs-unit != px {
-  @error "`#{$rfs-unit}` is not a valid unit for $rfs-unit. Use `px` or `rem`.";
-}
-
-// Breakpoint at where values start decreasing if screen width is smaller
-$rfs-breakpoint: 1600px !default;
-$rfs-breakpoint-unit: px !default;
-
-@if $rfs-breakpoint-unit !=
-  px and
-  $rfs-breakpoint-unit !=
-  em and
-  $rfs-breakpoint-unit !=
-  rem
-{
-  @error "`#{$rfs-breakpoint-unit}` is not a valid unit for $rfs-breakpoint-unit. Use `px`, `em` or `rem`.";
-}
-
-// Resize values based on screen height and width
-$rfs-two-dimensional: false !default;
-
-// Factor of decrease
-$rfs-factor: 10 !default;
-
-@if type-of($rfs-factor) != number or $rfs-factor <= 1 {
-  @error "`#{$rfs-factor}` is not a valid  $rfs-factor, it must be greater than 1.";
-}
-
-// Mode. Possibilities: "min-media-query", "max-media-query"
-$rfs-mode: min-media-query !default;
-
-// Generate enable or disable classes. Possibilities: false, "enable" or "disable"
-$rfs-class: disable !default; // This demo only
-
-// 1 rem = $rfs-rem-value px
-$rfs-rem-value: 16 !default;
-
-// Safari iframe resize bug: https://github.com/twbs/rfs/issues/14
-$rfs-safari-iframe-resize-bug-fix: true !default; // This demo only
-
-// Disable RFS by setting $enable-rfs to false
-$enable-rfs: true !default;
-
-// Cache $rfs-base-value unit
-$rfs-base-value-unit: unit($rfs-base-value);
-
-// Remove px-unit from $rfs-base-value for calculations
-@if $rfs-base-value-unit == px {
-  $rfs-base-value: $rfs-base-value / ($rfs-base-value * 0 + 1);
-} @else if $rfs-base-value-unit == rem {
-  $rfs-base-value: $rfs-base-value / ($rfs-base-value * 0 + 1 / $rfs-rem-value);
-}
-
-// Cache $rfs-breakpoint unit to prevent multiple calls
-$rfs-breakpoint-unit-cache: unit($rfs-breakpoint);
-
-// Remove unit from $rfs-breakpoint for calculations
-@if $rfs-breakpoint-unit-cache == px {
-  $rfs-breakpoint: $rfs-breakpoint / ($rfs-breakpoint * 0 + 1);
-} @else if
-  $rfs-breakpoint-unit-cache ==
-  rem or
-  $rfs-breakpoint-unit-cache ==
-  "em"
-{
-  $rfs-breakpoint: $rfs-breakpoint / ($rfs-breakpoint * 0 + 1 / $rfs-rem-value);
-}
-
-// Calculate the media query value
-$rfs-mq-value: if(
-  $rfs-breakpoint-unit == px,
-  #{$rfs-breakpoint}px,
-  #{$rfs-breakpoint / $rfs-rem-value}#{$rfs-breakpoint-unit}
-);
-$rfs-mq-property-width: if($rfs-mode == max-media-query, max-width, min-width);
-$rfs-mq-property-height: if(
-  $rfs-mode == max-media-query,
-  max-height,
-  min-height
-);
-
-// Internal mixin used to determine which media query needs to be used
-@mixin _rfs-media-query {
-  @if $rfs-two-dimensional {
-    @media (#{$rfs-mq-property-width}: #{$rfs-mq-value}), (#{$rfs-mq-property-height}: #{$rfs-mq-value}) {
-      @content;
-    }
-  } @else {
-    @media (#{$rfs-mq-property-width}: #{$rfs-mq-value}) {
-      @content;
-    }
-  }
-}
-
-// Internal mixin that adds disable classes to the selector if needed.
-@mixin _rfs-rule {
-  @if $rfs-class == disable and $rfs-mode == max-media-query {
-    // Adding an extra class increases specificity, which prevents the media query to override the property
-    &,
-    .disable-rfs &,
-    &.disable-rfs {
-      @content;
-    }
-  } @else if $rfs-class == enable and $rfs-mode == min-media-query {
-    .enable-rfs &,
-    &.enable-rfs {
-      @content;
-    }
-  } @else {
-    @content;
-  }
-}
-
-// Internal mixin that adds enable classes to the selector if needed.
-@mixin _rfs-media-query-rule {
-  @if $rfs-class == enable {
-    @if $rfs-mode == min-media-query {
-      @content;
-    }
-
-    @include _rfs-media-query {
-      .enable-rfs &,
-      &.enable-rfs {
-        @content;
-      }
-    }
-  } @else {
-    @if $rfs-class == disable and $rfs-mode == min-media-query {
-      .disable-rfs &,
-      &.disable-rfs {
-        @content;
-      }
-    }
-    @include _rfs-media-query {
-      @content;
-    }
-  }
-}
-
-// Helper function to get the formatted non-responsive value
-@function rfs-value($values) {
-  // Convert to list
-  $values: if(type-of($values) != list, ($values), $values);
-
-  $val: "";
-
-  // Loop over each value and calculate value
-  @each $value in $values {
-    @if $value == 0 {
-      $val: $val + " 0";
-    } @else {
-      // Cache $fs unit
-      $unit: if(type-of($value) == "number", unit($value), false);
-
-      @if $unit == "" {
-        // Add appropriate unit
-        $val: $val +
-          " " +
-          if($rfs-unit == rem, #{$value / $rfs-rem-value}rem, #{$value}px);
-      } @else if $unit == px {
-        // Convert to rem if needed
-        $val: $val +
-          " " +
-          if(
-            $rfs-unit == rem,
-            #{$value / ($value * 0 + $rfs-rem-value)}rem,
-            $value
-          );
-      } @else if $unit == rem {
-        // Convert to px if needed
-        $val: $val +
-          " " +
-          if(
-            $rfs-unit == px,
-            #{$value / ($value * 0 + 1) * $rfs-rem-value}px,
-            $value
-          );
-      } @else {
-        // If $fs isn't a number (like inherit) or $fs has a unit (not px or rem, like 1.5em) or $ is 0, just print the value
-        $val: $val + " " + $value;
-      }
-    }
-  }
-
-  // Remove first space
-  @return str-slice($val, 2);
-}
-
-// Helper function to get the responsive value calculated by RFS
-@function rfs-fluid-value($values) {
-  // Convert to list
-  $values: if(type-of($values) != list, ($values), $values);
-
-  $val: "";
-
-  // Loop over each value and calculate value
-  @each $value in $values {
-    @if $value == 0 {
-      $val: $val + " 0";
-    } @else {
-      // Cache $fs unit
-      $unit: if(type-of($value) == "number", unit($value), false);
-
-      // If $fs isn't a number (like inherit) or $fs has a unit (not px or rem, like 1.5em) or $ is 0, just print the value
-      @if not $unit or $unit != "" and $unit != px and $unit != rem {
-        $val: $val + " " + $value;
-      } @else {
-        // Remove unit from $fs for calculations
-        @if $unit == px {
-          $value: $value / ($value * 0 + 1);
-        } @else if $unit == rem {
-          $value: $value / ($value * 0 + 1 / $rfs-rem-value);
         }
 
-        // Only add the media query if the value is greater than the minimum value
-        @if $value <= $rfs-base-value or not $enable-rfs {
-          $val: $val +
-            " " +
-            if($rfs-unit == rem, #{$value / $rfs-rem-value}rem, #{$value}px);
+    }
+
+    @return ($font_size * $multiple) + 0px;
+}
+
+// scale given property between given sizes / breakpoints
+// example usage:
+// @include ss_scale(font-size, (600: 16, 768: 22, 1024: 30, 1280: 75));
+//
+// sets font-size as follows:
+// <= 600px: 16px
+// > 600px <= 768px: scale smoothly between 16px > 22px
+// > 768px <= 1024px: scale smoothly between 22px > 30px
+// > 1024px <= 1280px: scale smoothly between 30p > 75px
+// > 1280px: 75px
+//
+// ideally we could use min() / max() or even clamp(), but IE .... o.O
+
+// TODO: consider supporting em / rem units (to optionally account for different base font size set in user's browser)
+// use $line_height to define preferred line height for this item when scaling
+@mixin ss_scale($property, $values, $line_height: 1.4) {
+    $previousBreakpoint: null;
+    $previousValue: null;
+    $shorthandMap: (
+        'ipad': 1024,
+        'ipad-landscape': 1024,
+        'ipad-mini': 1024,
+        'ipad-mini-landscape': 1024,
+        'xga': 1024,
+        'ipad-portrait': 768,
+        'ipad-mini-portrait': 768,
+
+        // NB: iPad pro to test - x1.5?
+        'ipad-pro': 1366,
+        'ipad-pro-landscape': 1366,
+        'ipad-pro-12-9-landscape': 1366,
+        'ipad-pro-11': 1194,
+        'ipad-pro-11-landscape': 1194,
+        'ipad-pro-10-5': 1112,
+        'ipad-pro-10-5-landscape': 1112,
+        'ipad-pro-10-2': 1080,
+        'ipad-pro-10-2-landscape': 1080,
+        'ipad-pro-11-portrait': 834,
+        'ipad-pro-10-5-portrait': 834,
+        'ipad-pro-10-2-portrait': 810,
+        'laptop': 1366,                 // 1366x768
+        'wxga': 1366,                   // 1366x768
+        'sxga': 1280,                   // 1280x1024
+        'macbook': 2304,                // 2304x1440 x2
+        'macbook-pro-13-3': 2560 / 2,   // 2560x1600 x2
+        'macbook-pro-15': 2880 / 2,     // 2880x1800 x2
+        'macbook-pro-16': 3072 / 2,     // 3072x1920 x2
+        'imac-21-5': 4096 / 2,          // 4096x2394 x2
+        'imac-27': 5120 / 2             // 5120x2880 x2
+    );
+    $breakpointList: ();
+
+    // iterate through list and update shorthand breakpoint terms
+    @each $breakpoint, $value in $values {
+        $resolved: map-get($shorthandMap, $breakpoint);
+
+        @if ($resolved) {
+            $breakpoint: $resolved;
+        }
+
+        $breakpointList: map-merge($breakpointList, ($breakpoint: $value));
+    }
+
+    // ensure list is in breakpoint order    
+    $breakpointList: map-sort-keys($breakpointList);
+
+    // now loop through and generate font locks for each breakpoint
+    @each $breakpoint, $value in $breakpointList {
+        $index: index(($values), ($breakpoint $value)) - 1;
+        
+        @if ($index == 0) {
+            // set initial property
+            #{$property}: $value + 0px;
+
+            // if we're scaling font-size, update line-height appropriately
+            @if ($property == 'font-size') {
+                line-height: get_line_height($value);
+            }
+
         } @else {
-          // Calculate the minimum value
-          $value-min: $rfs-base-value +
-            ($value - $rfs-base-value) /
-            $rfs-factor;
+            $minWidth: $previousBreakpoint + 1;
+            $valueDiff: $value - $previousValue;
+            $breakpointDiff: $breakpoint - $previousBreakpoint;
+              
+            // set scaled value
+            @media only screen and (min-width: $minWidth + 0px) {
+                #{$property}: calc(#{$previousValue + 0px} + #{$valueDiff} * ((100vmax - #{$previousBreakpoint + 0px}) / #{$breakpointDiff}));
 
-          // Calculate difference between $value and the minimum value
-          $value-diff: $value - $value-min;
+                // if we're scaling font-size, update line-height appropriately
+                @if ($property == 'font-size') {
+                    line-height: $line_height;
+                    $slope: (1.06 - 1.5) / (240 - 16); // 1.06 @ 240px / 1.5 @ 16px
+                    $initial: 1.5 - $slope * 16;
+                    /*
+                    //line-height: calc(#{$previousValue + 0px} + #{$valueDiff} * ((100vmax - #{$previousBreakpoint + 0px}) / #{$breakpointDiff}) * 1.06);
+                    //line-height: calc((#{$previousValue + 0px} + #{$valueDiff} * ((100vmax - #{$previousBreakpoint + 0px}) / #{$breakpointDiff}) * #{$slope}) + #{$initial + 0px});
+                    //line-height: calc((#{$previousValue + 0px} + #{$valueDiff} * ((100vmax - #{$previousBreakpoint + 0px}) / #{$breakpointDiff})) * 1.616);
 
-          // Base value formatting
-          $min-width: if(
-            $rfs-unit == rem,
-            #{$value-min / $rfs-rem-value}rem,
-            #{$value-min}px
-          );
+                    line-height: clamp(
+                        calc((#{$previousValue + 0px} + #{$valueDiff} * ((100vmax - #{$previousBreakpoint + 0px}) / #{$breakpointDiff})) * 1.06), 
+                        calc(((#{$previousValue + 0px} + #{$valueDiff} * ((100vmax - #{$previousBreakpoint + 0px}) / #{$breakpointDiff})) * #{$slope}) + #{$initial + 0px}),
+                        calc((#{$previousValue + 0px} + #{$valueDiff} * ((100vmax - #{$previousBreakpoint + 0px}) / #{$breakpointDiff})) * 1.616));
+                    */
+                }
 
-          // Use `vmin` if two-dimensional is enabled
-          $variable-unit: if($rfs-two-dimensional, vmin, vw);
+            }
+              
+            @if ($index + 1 == length($values)) {
+                  
+                // set a maximum size at the last breakpoint
+                @media only screen and (min-width: $breakpoint + 0px) {
+                    #{$property}: $value + 0px;
 
-          // Calculate the variable width between 0 and $rfs-breakpoint
-          $variable-width: #{$value-diff *
-            100 /
-            $rfs-breakpoint}#{$variable-unit};
+                    // if we're scaling font-size, update line-height appropriately
+                    @if ($property == 'font-size') {
+                        line-height: get_line_height($value);
+                    }
 
-          // Return the calculated value
-          $val: $val + " " + calc(#{$min-width} + #{$variable-width});
+                }
+                  
+            }
+
         }
-      }
+          
+        $previousBreakpoint: $breakpoint;
+        $previousValue: $value;
     }
-  }
-
-  // Remove first space
-  @return str-slice($val, 2);
-}
-
-// RFS mixin
-@mixin rfs($values, $property: font-size) {
-  $val: rfs-value($values);
-  $fluidVal: rfs-fluid-value($values);
-
-  // Do not print the media query if responsive & non-responsive values are the same
-  @if $val == $fluidVal {
-    #{$property}: #{$val};
-  } @else {
-    @include _rfs-rule {
-      #{$property}: unquote(if($rfs-mode == max-media-query, $val, $fluidVal));
-
-      // Include safari iframe resize fix if needed
-      min-width: if($rfs-safari-iframe-resize-bug-fix, (0 * 1vw), null);
-    }
-
-    @include _rfs-media-query-rule {
-      #{$property}: unquote(if($rfs-mode == max-media-query, $fluidVal, $val));
-    }
-  }
-}
-
-// Shorthand helper mixins
-@mixin scalable_font_size($value) {
-  @include rfs($value);
-}
-
-@mixin scalable_padding($value) {
-  @include rfs($value, padding);
-}
-
-@mixin scalable_padding_top($value) {
-  @include rfs($value, padding-top);
-}
-
-@mixin scalable_padding_right($value) {
-  @include rfs($value, padding-right);
-}
-
-@mixin scalable_padding_bottom($value) {
-  @include rfs($value, padding-bottom);
-}
-
-@mixin scalable_padding_left($value) {
-  @include rfs($value, padding-left);
-}
-
-@mixin scalable_margin($value) {
-  @include rfs($value, margin);
-}
-
-@mixin scalable_margin_top($value) {
-  @include rfs($value, margin-top);
-}
-
-@mixin scalable_margin_right($value) {
-  @include rfs($value, margin-right);
-}
-
-@mixin scalable_margin_bottom($value) {
-  @include rfs($value, margin-bottom);
-}
-
-@mixin scalable_margin_left($value) {
-  @include rfs($value, margin-left);
-}
-
-@mixin scalable_line_height($value) {
-  @include rfs($value, line-height);
+  
 }
